--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "soop-audio",
   "version": "0.1.0",
-  "description": "Extract and play audio-only from soop VOD links",
+  "description": "Extract and play audio-only from soop VOD links in the browser",
   "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "browser": {
+    "./dist/index.js": "./dist/index.js"
+  },
   "bin": {
     "soop-audio": "./dist/cli.js"
   },
@@ -19,21 +23,21 @@
     "audio",
     "m3u8",
     "hls",
-    "streaming"
+    "streaming",
+    "browser"
   ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12",
-    "hls-parser": "^0.10.7",
-    "commander": "^11.0.0",
-    "puppeteer": "^21.5.0"
+    "hls-parser": "^0.10.7"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "typescript": "^5.3.0",
-    "ts-node": "^10.9.0"
-  }
+    "ts-node": "^10.9.0",
+    "cheerio": "^1.0.0-rc.12"
+  },
+  "peerDependencies": {},
+  "peerDependenciesMeta": {}
 }
 
